# django-todo

./: .env  README.md  pyproject.toml
config/: settings.py  urls.py
todo/: services.py  views.py
todo/migrations/: 0001_initial.py
